--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background: #fff;
+      }
+      img {
+        display: block;
+        width: 100%;
+      }
+    </style>
+  </head>
   <body>
     <img src="Envy_Guide.png">
     <img src="Envy_Guide_2.png">
