--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <style>
-      body {
+      html, body {
         margin: 0;
         padding: 0;
-        background: #fff;
+        background: black;
       }
       img {
         display: block;
-        width: 100%;
       }
     </style>
   </head>
@@ -18,3 +17,4 @@
     <img src="Envy_Guide_2.png">
   </body>
 </html>
+
