--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html>
   <head>
     <style>
-      html, body {
+           html, body {
         margin: 0;
         padding: 0;
         background: black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
       img {
         display: block;
+        margin: 0;
+        padding: 0;
+        max-width: 100%;
+        height: auto;
       }
     </style>
   </head>
